[project]
name = "latent-model-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=1.0.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
